--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <title> My first website </title>
-    <link> </link>
+    <link rel="stylesheet" type="text/css" href= "style.css"
   </head>
   
   <body>
